Add border on blink anim

--- a/index.html
+++ b/index.html
@@ -56,14 +56,20 @@
                 0% {
                     color: black;
                     background-color: white;
+                    border: none;
+                    padding: 4px 6px;
                 }
                 50% {
                     color: white;
                     background-color: black;
+                    border: 2px white dotted;
+                    padding: 2px 4px;
                 }
                 100% {
                     color: black;
                     background-color: white;
+                    border: none;
+                    padding: 4px 6px;
                 }
             }
             .vspacer {
