--- a/index.html
+++ b/index.html
@@ -158,8 +158,8 @@
             var hshakeGlobalValue = 0.0;
             var last = Date.now();
             
-            const hshakeVelocity = 2;
-            const hshakeMagnitude = 3;
+            var hshakeVelocity = 1.25;
+            var hshakeMagnitude = 2;
 
             function update() {
                 // calc deltaTime
