Preoccupy image size

--- a/index.html
+++ b/index.html
@@ -131,7 +131,7 @@
         <div class="container">
             <div class="hshake-0">시누의 싸이버스페이스</div>
             <div class="vspacer"></div>
-            <div class="hshake-1"><img class="cathead" src="icon.webp" draggable="false"></div>
+            <div class="hshake-1"><img class="cathead" style="width: 64px; height: 64px" src="icon.webp" draggable="false"></div>
             <div class="hshake-2">시누 (sinusinu)</div>
             <div class="hshake-3">반가워요! 👋</div>
             <div class="vspacer"></div>
