--- a/index.html
+++ b/index.html
@@ -92,6 +92,10 @@
                     padding: 4px 6px;
                 }
             }
+            .link-preload {
+                color: white !important;
+                background-color: black !important;
+            }
             .vspacer {
                 height: 20px;
             }
@@ -149,11 +153,11 @@
             <div class="vspacer"></div>
             <div class="hshake-2 dim">링크</div>
             <div class="vspacer"></div>
-            <div class="hshake-3"><a href="https://github.com/sinusinu" draggable="false">시누의 GitHub</a></div>
+            <div class="hshake-3"><a id="link-github" class="link-preload" href="https://github.com/sinusinu" draggable="false">시누의 GitHub</a></div>
             <div class="vspacer"></div>
-            <div class="hshake-4"><a href="/blog/" draggable="false">시누의 블로그</a></div>
+            <div class="hshake-4"><a id="link-blog" class="link-preload" href="/blog/" draggable="false">시누의 블로그</a></div>
             <div class="vspacer"></div>
-            <div class="hshake-5"><a href="/sinutools/" draggable="false">시누의 잡동사니 도구들</a></div>
+            <div class="hshake-5"><a id="link-sinutools" class="link-preload" href="/sinutools/" draggable="false">시누의 잡동사니 도구들</a></div>
         </div>
         <script>
             var cvNames = [ "--hshake-lpad-0", "--hshake-lpad-1", "--hshake-lpad-2", "--hshake-lpad-3", "--hshake-lpad-4", "--hshake-lpad-5", "--hshake-lpad-6", "--hshake-lpad-7", "--hshake-lpad-8", "--hshake-lpad-9" ];
@@ -170,6 +174,12 @@
             var hshakeMagnitude = hshakeMagnitudeSource;
             var hshakeIntroEffectTimer = 1;
             var hshakeIntroEffect = true;
+
+            var links = [
+                document.getElementById("link-github"),
+                document.getElementById("link-blog"),
+                document.getElementById("link-sinutools"),
+            ]
 
             function update() {
                 // calc deltaTime
@@ -202,6 +212,9 @@
             }
 
             window.addEventListener('load', function() {
+                for (var i = 0; i < links.length; i++) {
+                    links[i].classList.remove("link-preload");
+                }
                 last = Date.now();
                 requestAnimationFrame(update);
             })
