--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
             <div class="vspacer"></div>
             <div class="hshake-1"><img class="cathead" style="width: 64px; height: 64px" src="icon.webp" draggable="false"></div>
             <div class="hshake-2">시누 (sinusinu)</div>
-            <div class="hshake-3">반가워요! 👋</div>
+            <div class="hshake-3">우울한 코딩쟁이</div>
             <div class="vspacer"></div>
             <div class="hshake-4 dim">주 사용 언어</div>
             <div class="hshake-5">C#, Java, JavaScript</div>
@@ -151,13 +151,15 @@
             <div class="hshake-0 dim">관심 분야</div>
             <div class="hshake-1">프론트엔드/UI, 게임, 웹, LLM</div>
             <div class="vspacer"></div>
-            <div class="hshake-2 dim">링크</div>
+            <div class="hshake-2">반가워요! 👋</div>
             <div class="vspacer"></div>
-            <div class="hshake-3"><a id="link-github" class="link-preload" href="https://github.com/sinusinu" draggable="false">시누의 GitHub</a></div>
+            <div class="hshake-3 dim">링크</div>
             <div class="vspacer"></div>
-            <div class="hshake-4"><a id="link-blog" class="link-preload" href="/blog/" draggable="false">시누의 블로그</a></div>
+            <div class="hshake-4"><a id="link-github" class="link-preload" href="https://github.com/sinusinu" draggable="false">시누의 GitHub</a></div>
             <div class="vspacer"></div>
-            <div class="hshake-5"><a id="link-sinutools" class="link-preload" href="/sinutools/" draggable="false">시누의 잡동사니 도구들</a></div>
+            <div class="hshake-5"><a id="link-blog" class="link-preload" href="/blog/" draggable="false">시누의 블로그</a></div>
+            <div class="vspacer"></div>
+            <div class="hshake-6"><a id="link-sinutools" class="link-preload" href="/sinutools/" draggable="false">시누의 잡동사니 도구들</a></div>
         </div>
         <script>
             var cvNames = [ "--hshake-lpad-0", "--hshake-lpad-1", "--hshake-lpad-2", "--hshake-lpad-3", "--hshake-lpad-4", "--hshake-lpad-5", "--hshake-lpad-6", "--hshake-lpad-7", "--hshake-lpad-8", "--hshake-lpad-9" ];
