--- a/index.html
+++ b/index.html
@@ -138,7 +138,7 @@
             <div class="vspacer"></div>
             <div class="hshake-3 dim">링크</div>
             <div class="vspacer"></div>
-            <div class="hshake-4"><a id="link-github" class="link-preload" href="https://github.com/sinusinu" draggable="false">시누의 GitHub</a></div>
+            <div class="hshake-4"><span><a id="link-github" class="link-preload" href="https://github.com/sinusinu" draggable="false">GitHub</a></span>&nbsp;<span><a id="link-bsky" class="link-preload" href="https://bsky.app/profile/sinu.pe.kr" draggable="false">Bluesky</a></span>&nbsp;<span><a id="link-insta" class="link-preload" href="https://www.instagram.com/just4sinu/" draggable="false">Instagram</a></span></div>
             <div class="vspacer"></div>
             <div class="hshake-5"><a id="link-blog" class="link-preload" href="/blog/" draggable="false">시누의 블로그</a></div>
             <div class="vspacer"></div>
@@ -162,6 +162,8 @@
 
             var links = [
                 document.getElementById("link-github"),
+                document.getElementById("link-insta"),
+                document.getElementById("link-bsky"),
                 document.getElementById("link-blog"),
                 document.getElementById("link-sinutools"),
             ]
