--- a/index.html
+++ b/index.html
@@ -123,6 +123,29 @@
             .hshake-7 { translate: var(--hshake-lpad-7); }
             .hshake-8 { translate: var(--hshake-lpad-8); }
             .hshake-9 { translate: var(--hshake-lpad-9); }
+            .egg {
+                font-family: '맑은 고딕', 'Segoe UI', 'Tahoma', 'Geneva', 'Verdana', sans-serif;
+                position: absolute;
+                right: 74px;
+                bottom: 53px;
+                color: rgb(127, 127, 127);
+            }
+            @media (orientation: portrait) {
+                .egg {
+                    visibility: hidden;
+                }
+            }
+            .egg-hide {
+                visibility: hidden;
+            }
+            .egg-beeg {
+                font-size: 19px;
+                padding-bottom: 2px;
+                padding-left: 1px;
+            }
+            .egg-smol {
+                font-size: 15px;
+            }
         </style>
     </head>
     <body>
@@ -146,6 +169,10 @@
             <div class="hshake-7"><a id="link-blog" class="link-preload" href="/blog/" draggable="false">시누의 블로그</a></div>
             <div class="vspacer"></div>
             <div class="hshake-9"><a id="link-sinutools" class="link-preload" href="/sinutools/" draggable="false">시누의 잡동사니 도구들</a></div>
+            <div class="egg egg-hide" id="egg">
+                <div class="egg-beeg">Windows 정품 인증</div>
+                <div class="egg-smol">[설정]으로 이동하여 Windows를 정품 인증합니다.</div>
+            </div>
         </div>
         <script>
             var cvNames = [ "--hshake-lpad-0", "--hshake-lpad-1", "--hshake-lpad-2", "--hshake-lpad-3", "--hshake-lpad-4", "--hshake-lpad-5", "--hshake-lpad-6", "--hshake-lpad-7", "--hshake-lpad-8", "--hshake-lpad-9" ];
@@ -210,6 +237,8 @@
                 last = Date.now();
                 requestAnimationFrame(update);
             })
+
+            if (navigator.userAgent.indexOf("Windows") > 0) if (Math.random() < 0.05) document.getElementById("egg").classList.remove("egg-hide");
         </script>
     </body>
 </html>
