trying a dirty padding trick

--- a/index.html
+++ b/index.html
@@ -111,6 +111,11 @@
                 font-weight: bold;
                 color: white;
             }
+            @media (orientation: portrait) {
+                .window-title {
+                    padding-top: 9px;
+                }
+            }
             .window-content {
                 text-align: left;
                 padding: 8px;
