minor layout change

--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
             }
             :root {
                 --window-body-width: 320px;
-                --window-body-height: 270px;
+                --window-body-height: 238px;
                 --wbutton-body-width: 136px;
                 --wbutton-body-width-xl: 292px;
                 --wbutton-body-height: 32px;
@@ -228,7 +228,7 @@
                     <div class="window-piece window-5">
                         <div class="window-content">
                             <div class="window-hpane bspacer">
-                                <div><img style="width: 96px; height: 96px; image-rendering: optimizeQuality;" src="icon.webp" draggable="false"></div>
+                                <div><img style="width: 64px; height: 64px;" src="icon.webp" draggable="false"></div>
                                 <div class="window-hpane-primary window-hpane-label">반가워요!</div>
                             </div>
                             <div class="wbutton-container">
